unicode weird character

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Designs and code for the SkypeRobot by Josh Harle.
-For more information see http://tacticalspace.org/archives/skyperobot/ ?
+For more information see http://tacticalspace.org/archives/skyperobot/ 
 
 This projectis licensed under a Creative Commons Attribution License.
